--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 					<a href="Homework/hellosass_SCSS/index.html" target="blank" class="list__link">Hello SCSS</a>
 					<a href="Homework/flex_flexes/index.html" target="blank" class="list__link">Flexes</a>
 					<a href="Homework/adaptive/index.html" target="blank" class="list__link">Adaptive</a>
+					<a href="Homework\luxtrader\index.html" target="blank" class="list__link">LuxTrader</a>
 				</div>
 			</div>
 		</div>
